# zero2prod

./: .env  Cargo.toml  bacon.toml  configuration.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
