[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Federico Vitale <mail@fedevitale.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
reqwest = "0.11.11"
serde = { version = "1.0.142", features = ["derive"] }
tokio = { "version" = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.36", features = ["log"] }
config = "0.13.2"
uuid = { version = "1.1.2", features = ["v4"] } 
chrono = "0.4.20"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
once_cell = "1.13.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

